--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -438,9 +438,10 @@
     text-align: center;
     margin-left: 15%;
     width: 170px;
-    background-color: red;
+    background-color:;
     border-radius: 13px;
     border: none;
+    color: black;
 }
 
 .list1 button:hover {
@@ -451,7 +452,7 @@
 
 .list1 button a {
     text-decoration: none;
-    color: #ffffff;
+    color: black;
 }
 
 .lists1 {
@@ -494,7 +495,6 @@
     text-align: center;
     margin-left: 15%;
     width: 170px;
-    background-color: red;
     border-radius: 13px;
     border: none;
 }
@@ -507,7 +507,7 @@
 
 .list2 button a {
     text-decoration: none;
-    color: #ffffff;
+    color: black;
 }
 
 .piechart {
@@ -524,7 +524,7 @@
     justify-content: center;
     align-items: center;
     margin-left: 20%;
-    background-color: red;
+    background-color:#FFCB9A ;
 }
 
 .joinbox h1 {
