--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -438,7 +438,7 @@
     text-align: center;
     margin-left: 15%;
     width: 170px;
-    background-color:;
+    /* background-color:; */
     border-radius: 13px;
     border: none;
     color: black;
@@ -574,7 +574,7 @@
 .cm img {
     margin-top: 30px;
     border-radius: 9px;
-    box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
+    /* box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53); */
     background-color: aliceblue;
 }
 
