--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
     height: 100px;
     position: sticky;
     top: 0px;
-    background-color: #45475f;
+    background-color: black;
     box-shadow: -1px 9px 14px 0px rgba(26, 22, 26, 0.53);
     background-position: center;
     background-size: cover;
@@ -91,7 +91,7 @@
     margin-right: 30px;
     color: black;
     border-radius: 9px;
-    color: #ffffff;
+    color: white;
 
 
 }
