--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
     height: 100px;
     position: sticky;
     top: 0px;
-    background-color: #b199b7;
+    background-color: #FFCB9A;
     box-shadow: -1px 9px 14px 0px rgba(26, 22, 26, 0.53);
     background-position: center;
     background-size: cover;
