--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -716,7 +716,7 @@ th {
 
 .complete .rules {
     width: 90%;
-    height: 250px;
+    height: auto;
     box-shadow: 4px 3px 20px -2px rgba(16, 52, 107, 1);
     margin-top: 50px;
 
@@ -770,6 +770,9 @@ th {
 .datelist table td {
     padding: 20px;
     border: 2px solid gray;
+}
+.pastleaders tr:nth-child(even){
+    background-color: #FFCB9A;
 }
 
 .pastleaders table thead {
