--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,7 @@ body::-webkit-scrollbar{
     height: 100px;
     position: sticky;
     top: 0px;
-    background-color: #0066cc;
+    background-color: #0DD9D9;
     box-shadow: -1px 9px 14px 0px rgba(26, 22, 26, 0.53);
     background-position: center;
     background-size: cover;
@@ -104,7 +104,7 @@ body::-webkit-scrollbar{
 .nav ul li a:hover {
     background-color: #ffffff1A;
     transform: 0.5s;
-    color: white;
+    color: #ffcc66;
 
 }
 
