--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,13 +17,23 @@ body::-webkit-scrollbar{
     min-width: 100%;
     min-height: 100%;
     z-index: -1;
+    filter: blur(5px);
 }
-
+.headvideo1 video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+    /* filter: blur(5px); */
+}
 .totalnav {
     height: 100px;
     position: sticky;
     top: 0px;
-    background-color: #0DD9D9;
+    /* background-color: #FF6B1A; */
+    background-image: url(../images/);
     box-shadow: -1px 9px 14px 0px rgba(26, 22, 26, 0.53);
     background-position: center;
     background-size: cover;
@@ -95,16 +105,16 @@ body::-webkit-scrollbar{
     margin: 10px;
     padding: 8px;
     margin-right: 30px;
-    color: white;
+    color: black;
     border-radius: 9px;
 
 
 }
 
 .nav ul li a:hover {
-    background-color: #ffffff1A;
+    background-color: #B3ECF2;
     transform: 0.5s;
-    color: #ffcc66;
+    /* color: #ffffff; */
 
 }
 
@@ -121,8 +131,9 @@ body::-webkit-scrollbar{
     min-width: 120px;
     z-index: 1;
     margin: 10px;
-    background-color: #FFCB9A;
+    background-image: url(../images/basic-white-designify.png);
     border-radius: 9px;
+    background-position: center;
 }
 
 .dropdown-content a {
@@ -311,7 +322,7 @@ body::-webkit-scrollbar{
     padding-bottom: 20px;
 }
 
-.section4 h3 {
+.section4 p {
     text-align: center;
     text-transform: uppercase;
     color: black;
