--- a/assets/css/join now.css
+++ b/assets/css/join now.css
@@ -87,9 +87,9 @@ body::-webkit-scrollbar{
     padding-right: 30px;
     text-transform: uppercase;
     font-size: 18px;
-    padding-left: 10px;
+    /* padding-left: 10px; */
     margin: 10px;
-    padding: 8px;
+    padding:8px 18px 8px 8px;
     margin-right: 30px;
     color: black;
     border-radius: 9px;
