--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,6 @@ body::-webkit-scrollbar {
 }
 
 /* nav bar start */
-
 .headvideo video {
     position: absolute;
     right: 0;
@@ -18,7 +17,7 @@ body::-webkit-scrollbar {
     min-width: 100%;
     min-height: 100%;
     z-index: -1;
-    filter: blur(5px);
+    /* filter: blur(2px); */
 }
 
 .headvideo1 video {
@@ -115,7 +114,7 @@ body::-webkit-scrollbar {
 .nav ul li a:hover {
     background-color: #B1B2FF;
     transition: 0.5s;
-    transform:scale(1.1);
+    transform: scale(1.1);
 
 }
 
@@ -179,8 +178,7 @@ body::-webkit-scrollbar {
     padding-top: 20px;
     line-height: 1.3;
     color: black;
-    text-shadow: -2px 2px #ffffff;
-
+    font-weight: 600;
 
 }
 
@@ -398,7 +396,6 @@ body::-webkit-scrollbar {
 
 /* portfolio page-------------------------------------------- */
 
-
 .list1 {
     width: 250px;
     height: 370px;
@@ -406,6 +403,7 @@ body::-webkit-scrollbar {
     margin: 50px;
     border-radius: 8px;
     margin-left: 42%;
+
 }
 
 .list1 img {
@@ -550,6 +548,8 @@ body::-webkit-scrollbar {
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
     width: 90%;
     margin-left: 5%;
+    background-color: #f2f3f4;
+
 
 }
 
