--- a/assets/css/english-version.css
+++ b/assets/css/english-version.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200&display=swap');
+
 
 * {
     margin: 0;
@@ -8,22 +7,18 @@
     box-sizing: border-box;
 
 }
-
-body {
-    font-family: 'Noto Sans Tamil', sans-serif;
+body{
+    font-family: 'Kanit', sans-serif;
+}
+li{
+    list-style: none;
+}
+a{
+    text-decoration: none;
 }
 
 body::-webkit-scrollbar {
     display: none;
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: black;
 }
 
 /* nav bar start */
@@ -64,21 +59,20 @@ a {
 
 .topic h1 {
     padding: 10px 0 0 40px;
-    font-family: 'Kanit', sans-serif;
     font-weight: 900;
     font-size: 25px;
 }
 
 .topic1 {
     display: flex;
-    padding: 7px 20px 0 0;
+    
 
 }
 
 .topic1 p a {
     color: black;
-    /* padding: 0 px 0 0; */
     font-size: 13px;
+    padding-right: 10px;
 }
 
 .topic1 p {
@@ -153,7 +147,7 @@ a {
     background-color: #ededed;
     border-radius: 9px;
     background-position: center;
-
+    
 }
 
 .dropdown .dropdown-content a {
@@ -205,7 +199,7 @@ a {
 
 .section1 button {
     border-radius: 10px;
-    width: 400px;
+    width: 200px;
     padding: 12px;
     margin-top: 25px;
     background-color: #ffffff1A;
@@ -243,7 +237,7 @@ a {
     display: flex;
     flex-direction: row;
     width: 60%;
-    height: 100%;
+    height: 600px;
     height: auto;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
 }
@@ -258,15 +252,11 @@ a {
 .content1 p {
     font-size: 22px;
     padding: 10px;
-    /* text-align: justify; */
-    line-height: 1.5;
 }
-
-.sideimage img {
-    width: 500px;
-    height: 305px
+.sideimage img{
+   width:500px ;
+   height:305px 
 }
-
 .section3 {
     background-image: url('../images/learning-gc49fa0086_1920.jpg');
     height: 600px;
@@ -307,11 +297,11 @@ a {
     padding: 10px;
     border-radius: 15px;
     font-size: 20px;
-    width: 400px;
+    width: 200px;
     background-color: #ffffff1A;
     border: 2px outset black;
 
-}
+} 
 
 .section3 button:hover {
     transform: scale(1.1);
@@ -410,8 +400,6 @@ a {
     height: 380px;
     margin-top: 40px;
     color: lightgray;
-    position: sticky;
-    top: 0px;
 }
 
 .footer .foot {
@@ -440,213 +428,23 @@ a {
     font-size: 22px;
 }
 
-/* parties names start */
-
-.totalparties {
-    width: 90%;
-    min-height: 100vh;
-    margin: 10% 0 0 10%;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto;
-    row-gap: 10%;
-
-}
-
-
-.parties-main {
-    position: relative;
-    width: 300px;
-    height: 320px;
-
-}
-
-.parties2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: all 0.5s ease;
-}
-
-.parties2:hover {
-    transform: rotatey(180deg);
-}
-
-.fontside {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background-image: url("../images/dmk-logo.png");
-    background-position: center;
-    background-size: cover;
-    font-size: 16px;
-    font-weight: 900;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
-}
-
-.fontside p {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    color: #ffffff;
-    height: 50px;
-    width: 100%;
-    text-shadow: -2px 2px black;
-}
-
-.backside {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background-color: #B1B2FF;
-    transform: rotatey(180deg);
-    color: black;
-    text-shadow: -2px 2px #ffffff;
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
-}
-
-.backside img {
-    width: 180px;
-    height: 180px;
-}
-
-.backside button {
-    padding: 10px;
-    background-color: #f2f3f4;
-    border-radius: 10px;
-    width: 150px;
-}
-
-.backside button:hover {
-    background-color: #B1B2FF;
-    border-radius: 10px;
-}
-
-
-.fontside1 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background-image: url("../images/aiadmk.png");
-    background-position: center;
-    background-size: cover;
-    font-size: 16px;
-    font-weight: 900;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
-}
-
-.fontside1 p {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    color: #ffffff;
-    height: auto;
-    width: 100%;
-    text-shadow: -2px 2px black;
-}
-
-
-.fontside2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background-image: url("../images/inc.png");
-    background-position: center;
-    background-size: cover;
-    font-size: 16px;
-    font-weight: 900;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
-}
-
-.fontside2 p {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    color: #ffffff;
-    height: 50px;
-    width: 100%;
-    text-shadow: -2px 2px black;
-}
-
-
-
-.fontside3 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background-image: url("../images/naam-tamizhar.jpg");
-    background-position: center;
-    background-size: cover;
-    font-size: 16px;
-    font-weight: 900;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
-}
-
-.fontside3 p {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    color: #ffffff;
-    height: 50px;
-    width: 100%;
-    text-shadow: -2px 2px black;
-}
-
-
-
-
 /* portfolio page-------------------------------------------- */
 
 .list1 {
-    width: 300px;
-    height: 420px;
+    width: 250px;
+    height: 370px;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
     margin: 50px;
     border-radius: 8px;
-    margin-left: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
+    margin-left: 42%;
 
 }
 
 .list1 img {
     width: 220px;
     height: 250px;
+    padding-top: 10px;
+    padding-left: 28px;
     border-radius: 8px;
 }
 
@@ -655,15 +453,15 @@ a {
     transition: 0.5s;
 }
 
-.list1 p {
-    text-align: start;
-    line-height: 1.5;
-    padding-top: 10px;
+.list1 h3 {
+    text-align: center;
+    padding: 20px 0 20px 0;
 }
 
 .list1 button {
     padding: 10px;
     text-align: center;
+    margin-left: 15%;
     width: 170px;
     border-radius: 13px;
     border: none;
@@ -676,31 +474,29 @@ a {
     transition: .2s;
 }
 
-
+.list1 button a {
+    text-decoration: none;
+    color: black;
+}
 
 .lists1 {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto auto;
     row-gap: 50px;
-    margin-left: 5%;
+    margin-left: 8%;
 
 
 }
 
 .list2 {
-    width: 300px;
-    height: 420px;
+    width: 250px;
+    height: 370px;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
-    margin: 50px;
     border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-     /* animation-duration: 3s;
-    animation-name: slidein; 
-    animation-iteration-count: infinite; */
+    animation-duration: 3s;
+    animation-name: slidein;
+    /* animation-iteration-count: infinite */
 }
 
 @keyframes slidein {
@@ -718,6 +514,8 @@ a {
 .list2 img {
     width: 220px;
     height: 250px;
+    padding-top: 20px;
+    padding-left: 28px;
     border-radius: 8px;
 }
 
@@ -726,19 +524,18 @@ a {
     transition: 0.5s;
 }
 
-.list2 p {
-    text-align: start;
-    line-height: 1.5;
-    padding-top: 10px;
+.list2 h3 {
+    text-align: center;
+    padding: 20px 0 20px 0;
 }
 
 .list2 button {
     padding: 10px;
     text-align: center;
+    margin-left: 15%;
     width: 170px;
     border-radius: 13px;
     border: none;
-    color: black;
 }
 
 .list2 button:hover {
@@ -747,6 +544,10 @@ a {
     transition: .2s;
 }
 
+.list2 button a {
+    text-decoration: none;
+    color: black;
+}
 
 .piechart {
     margin-left: 20%;
@@ -765,7 +566,7 @@ a {
     justify-content: center;
     align-items: center;
     margin-left: 20%;
-    background-color: #D2DAFF;
+    background-color: skyblue;
 }
 
 .joinbox h1 {
@@ -794,209 +595,144 @@ a {
 
 }
 
+/*       profile page start - */
+.all {
+    box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
+    width: 90%;
+    margin-left: 5%;
+    /* background-color: #f2f3f4; */
 
-/* profile page */
 
-.cm-total-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
 }
 
-.headprofile {
+.cm {
+    margin-left: 2%;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    margin: 5% 0 0 5%;
-    width: 60%;
+    align-items: center;
 }
 
-.headprofile .cm-image img {
-    width: 400px;
-    height: 600px;
+.cmimage h1 {
+    margin-top: 30px;
 }
 
-.headprofile .cm-name p {
-    font-size: 22px;
-    line-height: 4;
+.cm img {
+    margin-top: 30px;
+    border-radius: 9px;
+    /* box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53); */
+    background-color: aliceblue;
 }
 
-.headprofile .cm-name p strong {
-    padding-right: 15px;
+.cm .cmcontent {
+    width: 75%;
+    margin-top: 60px;
 }
 
-.profile-nav ul {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
+.cm .cmcontent p {
     font-size: 18px;
-    height: 300px;
-    margin-left: 30px;
-
+    line-height: 1.2;
+    padding-top: 15px;
+    padding-bottom: 10px;
 }
 
-.profile-nav {
-    margin: 5% 0 0 5%;
-    box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
-    width: 300px;
-    height: 300px;
+.cmcontent1 {
 
+    margin-left: 2%;
 }
 
-
-.cmcontent {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    height: 350px;
-    margin: 4% 0 0 5%;
-    line-height: 1.5;
-    overflow: scroll;
+.cmcontent1 p {
+    padding-top: 15px;
+    padding-bottom: 10px;
+    line-height: 1.2;
+    font-size: 18px;
 }
 
-.cmcontent::-webkit-scrollbar {
-    display: none;
+.cmcontent1 h2 {
+    padding-top: 10px;
 }
 
-#birth {
-    width: 90%;
-    min-height: 300px;
-    line-height: 1.7;
-    margin-left: 10%;
-}
-
-#birth h2,
-#birth p {
-    padding-top: 30px;
-    font-size: 22px;
-}
-
-#educatiion {
-    width: 90%;
-    min-height: 300px;
-    line-height: 1.7;
-    margin-left: 10%;
-}
-
-#educatiion h2,
-#educatiion p {
-    padding-top: 30px;
-    font-size: 22px;
-}
-
-#family {
-    width: 90%;
-    min-height: 570px;
-    line-height: 1.7;
-    margin-left: 10%;
-}
-
-#family h2,
-#family p {
-    padding-top: 30px;
-    font-size: 22px;
-}
-
-#movie {
-    width: 90%;
-    min-height: 300px;
-    line-height: 1.7;
-    margin-left: 10%;
-}
-
-#movie h2,
-#movie p {
-    padding-top: 30px;
-    font-size: 22px;
-}
-
-#politics {
-    width: 90%;
-    min-height: 500px;
-    line-height: 1.7;
-    margin-left: 10%;
-}
-
-#politics h2,
-#politics p {
-    padding-top: 30px;
-    font-size: 22px;
-}
-
-
-#income {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    width: 90%;
-    min-height: 300px;
-    line-height: 1.7;
-    margin-left: 10%;
-}
-
-#income h2,
-#income p {
-    padding-top: 30px;
-    font-size: 22px;
+.assets h2 {
+    padding-top: 20px;
+    padding-left: 5%;
 }
 
 .assets table td {
-    padding: 10px;
+    padding: 20px;
+    border: 1px solid gray;
+    border-collapse: collapse;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.assets table {
+    border-collapse: collapse;
+    margin-left: 30%;
 }
 
 .assets1 {
+    margin-left: 2%;
+    width: 90%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 30px;
-}
-
-.assets1 .assetscm {
-    padding-top: 20px;
-
-}
-
-
-
-
-/* manifesto page */
-
-.manifesto-create{
-   display: flex; 
-   align-items: center;
-   justify-content: space-around;
-   
-}
-.mani-navbar{
-    position: sticky;
-    top: 0px;
-   
-}
-.mani-navbar ul {
-    display: flex;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    height: 200px;
+    padding: 10px;
+}
+
+.survey {
+    margin-left: 30%;
+}
+
+.electiontable h2 {
+    padding-bottom: 30px;
+    padding-top: 20px;
+}
+
+.electiontable {
+    margin-left: 25%;
+}
+
+.electiontable table td,
+th {
+    padding: 15px;
+    border: 1px solid gray;
+}
+
+.electiontable table {
+    border-collapse: collapse;
+}
+
+.opinionbox {
+    width: 300px;
+    height: 150px;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
-    height:500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     margin-top: 30px;
-
-
+    margin-left: 40%;
+    border-radius: 10px;
 }
-.mani-navbar ul li{
-    font-size: 22px;
+
+.opinionbox input {
+    padding: 10px;
+    width: 200px;
+    border-radius: 10px;
 }
+
+/* manifesto page */
 .manisurvey {
     margin-left: 20%;
     margin-top: 30px;
 }
 
 .complete {
-    height: 700px;
+    height: 100em;
     width: 60%;
     overflow: scroll;
+    margin-left: 20%;
 }
-
 
 .kali {
     position: sticky;
@@ -1045,13 +781,13 @@ a {
 
 .complete .rules {
     width: 90%;
-    height: auto;
+    height: 250px;
     box-shadow: 4px 3px 20px -2px rgba(16, 52, 107, 1);
     margin-top: 50px;
-    /* overflow: scroll; */
+    overflow: scroll;
     background-color: black;
-    /* animation-duration: 3s; */
-    /* animation-name: slidein; */
+    animation-duration: 3s;
+    animation-name: slidein;
     /* animation-iteration-count: infinite; */
 }
 
@@ -1115,9 +851,6 @@ a {
     font-size: 16px;
 }
 
-
-
-
 /* past leader page*/
 
 .datelist table {
@@ -1133,19 +866,20 @@ a {
 
 .datelist table td {
     padding: 20px;
-    /* border: 2px solid gray; */
+    border: 2px solid gray;
 }
 
-/* .pastleaders tr:nth-child(even) {
+.pastleaders tr:nth-child(even) {
     background-color: #FFCB9A;
-} */
+}
 
 .pastleaders table thead {
-    background-color: #ffcc00;
+    background-color: black;
+    color: white;
 }
 
 .pastleaders table td {
-    /* border: 2px solid gray; */
+    border: 2px solid gray;
     padding: 20px;
 }
 
@@ -1179,7 +913,7 @@ a {
 .governer {
     height: 750px;
     overflow: scroll;
-    /* width: 90%; */
+    width: 90%;
 
 }
 
@@ -1189,35 +923,21 @@ a {
 
 .governer table {
     border-collapse: collapse;
-    /* margin-left: 10%; */
+    margin-left: 10%;
 }
 
 .governer table th {
     background-color: black;
     color: #ffffff;
-    padding: 10px;
 }
 
 .governer table td {
     padding: 20px;
-    /* border: 2px solid gray; */
-    /* background-color: #ffffff1A; */
+    border: 2px solid gray;
+    background-color: #ffffff1A;
     color: black;
     font-weight: 700;
 
-}
-/* .governer tr{
-    display: flex;
-    flex-direction: column;
-} */
-.governer table tr td .name-img{
-    display: flex;
-    align-items: center;
-    
-}
-.governer table tr td .name-img img{
-    width: 40px;
-    height: 40px;
 }
 
 .governer table td a {
@@ -1235,102 +955,6 @@ a {
     padding: 10px;
     color: black;
     border-radius: 10px;
-}
-.profile-main {
-    position: relative;
-    width: 200px;
-    height: 200px;
-
-}
-
-.parties {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: all 0.5s ease;
-}
-
-.parties:hover {
-    transform: rotatey(180deg);
-}
-
-.fontsidepro {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background-image: url("../images/logo.png");
-    background-position: center;
-    background-size: cover;
-    font-size: 16px;
-    font-weight: 900;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
-}
-.fontsidepro:nth-child(even){
-    background-image: url("../images/Mmk_flag.png");
-}
-
-.fontsidepro p {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    color: #ffffff;
-    height: 100%;
-    width: 100%;
-    text-shadow: -2px 2px black;
-
-}
-
-.backsidepro {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    background-color: #B1B2FF;
-    transform: rotatey(180deg);
-    color: black;
-    text-shadow: -2px 2px #ffffff;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
-    border-radius: 10px;
-}
-
-.backsidepro img {
-    width: 120px;
-    height: 140px;
-    border-radius: 5px;
-}
-
-.backsidepro button {
-    padding: 5px;
-    background-color: #f2f3f4;
-    border-radius: 10px;
-    
-}
-.parties .backsidepro button a{
-    font-size: 13px;
-}
-
-.backsidepro button:hover {
-    background-color: #B1B2FF;
-    border-radius: 10px;
-}
-td .name-img img{
-    width: 40px;
-    height: 40px;
-}
-td .name-img{
-    display: flex;
-    align-items: center;
 }
 
 /* mla ditail page */
