--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,6 +67,8 @@ a {
     font-family: 'Kanit', sans-serif;
     font-weight: 900;
     font-size: 25px;
+    color: #FE9227;
+
 }
 
 .topic1 {
@@ -77,12 +79,12 @@ a {
 
 .topic1 p a {
     color: black;
-    /* padding: 0 px 0 0; */
     font-size: 13px;
 }
 
 .topic1 p {
     padding-left: 10px;
+
 }
 
 .input {
@@ -186,7 +188,7 @@ a {
 }
 
 .section1 h1 {
-    font-size: 45px;
+    font-size: 30px;
     text-align: center;
     color: black;
     text-shadow: -2px 2px #ffffff;
@@ -195,7 +197,7 @@ a {
 
 .section1 p {
     text-align: center;
-    font-size: 22px;
+    font-size: 18px;
     padding-top: 20px;
     line-height: 1.3;
     color: black;
@@ -220,7 +222,7 @@ a {
 
 .section1 button a {
     text-decoration: none;
-    font-size: 22px;
+    font-size: 18px;
     color: black;
 }
 
@@ -256,9 +258,8 @@ a {
 }
 
 .content1 p {
-    font-size: 22px;
+    font-size: 18px;
     padding: 10px;
-    /* text-align: justify; */
     line-height: 1.5;
 }
 
@@ -292,8 +293,12 @@ a {
 
 .section3 h1 {
     padding-bottom: 30px;
-    font-size: 52px;
+    font-size: 40px;
     font-weight: 900;
+}
+
+.section3 h1 span {
+    color: #FE9227;
 }
 
 .section3 h2 {
@@ -361,6 +366,7 @@ a {
 
 }
 
+
 .news {
     display: flex;
     justify-content: space-around;
@@ -375,7 +381,7 @@ a {
 
 .news1 {
     width: 25%;
-    height: 500px;
+    height: auto;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
     border-radius: 10px;
     display: flex;
@@ -400,6 +406,18 @@ a {
     margin: 20px 10px 10px 35px;
     border-radius: 10px;
     width: 300px;
+}
+
+.news .news1 h2 {
+    font-size: 18px;
+    padding: 10px;
+    text-align: center;
+}
+
+.news .news1 p {
+    padding: 10px 0 0 35px;
+    font-size: 15px;
+    /* text-align: justify; */
 }
 
 /* footer page */
@@ -492,11 +510,11 @@ a {
 }
 
 .fontside p {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgb(10, 135, 252);
+    background-color: rgba(63, 53, 251, 0.4);
     text-align: center;
     color: #ffffff;
-    height: 50px;
+    height: 60px;
     width: 100%;
     text-shadow: -2px 2px black;
 }
@@ -517,6 +535,7 @@ a {
     align-items: center;
     box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
+    filter: blur(-2px);
 }
 
 .backside img {
@@ -553,6 +572,7 @@ a {
     align-items: center;
     box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
+    filter: blur(2px);
 }
 
 .fontside1 p {
@@ -582,6 +602,8 @@ a {
     align-items: center;
     box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
+    filter: blur(2px);
+
 }
 
 .fontside2 p {
@@ -612,6 +634,8 @@ a {
     align-items: center;
     box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
+    filter: blur(2px);
+
 }
 
 .fontside3 p {
@@ -698,7 +722,7 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-     /* animation-duration: 3s;
+    /* animation-duration: 3s;
     animation-name: slidein; 
     animation-iteration-count: infinite; */
 }
@@ -749,7 +773,7 @@ a {
 
 
 .piechart {
-    margin-left: 20%;
+    margin-left: 23%;
     margin-top: 30px;
 
 }
@@ -814,12 +838,15 @@ a {
 .headprofile .cm-image img {
     width: 400px;
     height: 600px;
+    border-radius: 10px;
 }
 
 .headprofile .cm-name p {
     font-size: 22px;
     line-height: 4;
 }
+
+
 
 .headprofile .cm-name p strong {
     padding-right: 15px;
@@ -840,6 +867,7 @@ a {
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
     width: 300px;
     height: 300px;
+    background-color: #e1f5e1;
 
 }
 
@@ -940,6 +968,19 @@ a {
     font-size: 22px;
 }
 
+#job-detail {
+    width: 90%;
+    min-height: 500px;
+    line-height: 1.7;
+    margin-left: 10%;
+}
+
+#job-detail h2,
+#job-detail p {
+    padding-top: 30px;
+    font-size: 22px;
+}
+
 .assets table td {
     padding: 10px;
 }
@@ -961,31 +1002,35 @@ a {
 
 /* manifesto page */
 
-.manifesto-create{
-   display: flex; 
-   align-items: center;
-   justify-content: space-around;
-   
+.manifesto-create {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
 }
-.mani-navbar{
+
+.mani-navbar {
     position: sticky;
     top: 0px;
-   
+
 }
+
 .mani-navbar ul {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
-    height:500px;
+    height: 500px;
     margin-top: 30px;
 
 
 }
-.mani-navbar ul li{
+
+.mani-navbar ul li {
     font-size: 22px;
 }
+
 .manisurvey {
     margin-left: 20%;
     margin-top: 30px;
@@ -1048,24 +1093,10 @@ a {
     height: auto;
     box-shadow: 4px 3px 20px -2px rgba(16, 52, 107, 1);
     margin-top: 50px;
-    /* overflow: scroll; */
     background-color: black;
-    /* animation-duration: 3s; */
-    /* animation-name: slidein; */
-    /* animation-iteration-count: infinite; */
+
 }
 
-@keyframes slidein {
-    from {
-        margin-left: 100%;
-        width: 300%;
-    }
-
-    to {
-        margin-left: 0%;
-        width: 100%;
-    }
-}
 
 .complete .rules::-webkit-scrollbar {
     display: none;
@@ -1085,12 +1116,13 @@ a {
     margin-bottom: 20px;
 }
 
-.complete .rules .rulescolor1 {
+.complete .rules button {
     padding: 12px;
     border-radius: 10px;
     margin-left: 30px;
     border: none;
-    background-color: #ffcc00;
+    /* background-color: red; */
+    background-color: #fc9a9d;
     width: 150px;
     color: black;
     font-size: 16px;
@@ -1104,8 +1136,8 @@ a {
     color: #ffffff;
 }
 
-.rules .rulescolor {
-    background-color: orange;
+.complete .rules .rulescolor {
+    background-color: #75E6DA;
     padding: 12px;
     border-radius: 10px;
     margin-left: 30px;
@@ -1120,38 +1152,25 @@ a {
 
 /* past leader page*/
 
-.datelist table {
-    border-collapse: collapse;
-    margin-left: 24%;
-    margin-bottom: 30px;
-}
-
-.datelist table thead {
-    background-color: black;
-    color: #ffffff;
-}
-
-.datelist table td {
-    padding: 20px;
-    /* border: 2px solid gray; */
-}
-
-/* .pastleaders tr:nth-child(even) {
-    background-color: #FFCB9A;
-} */
-
-.pastleaders table thead {
-    background-color: #ffcc00;
+.pastleaders h1{
+    padding: 40px;
+    text-align: center;
+    text-decoration: underline double orange;
 }
 
 .pastleaders table td {
-    /* border: 2px solid gray; */
-    padding: 20px;
+    padding: 2em;
 }
 
 .pastleaders table {
-    border-collapse: collapse;
-    margin-left: 25%;
+    margin-left: 20%;
+    border: 2px solid black;
+}
+
+.pastleaders table tbody th {
+    background-color: black;
+    color: #ffffff;
+    padding: 20px;
 }
 
 .pastleaders table td a {
@@ -1169,6 +1188,14 @@ a {
     column-span: 1;
 }
 
+#pastleader p {
+    background-color: rgb(241, 207, 114);
+    background-color: rgba(253, 167, 75, 0.4);
+    color: black;
+    text-shadow: -2px 2px #ffffff;
+
+}
+
 /* governer page start */
 .governer h1 {
     padding: 30px;
@@ -1179,7 +1206,6 @@ a {
 .governer {
     height: 750px;
     overflow: scroll;
-    /* width: 90%; */
 
 }
 
@@ -1187,9 +1213,14 @@ a {
     display: none;
 }
 
+.mla-list-intro {
+    line-height: 2;
+    padding: 20px;
+    font-size: 20px;
+}
+
 .governer table {
     border-collapse: collapse;
-    /* margin-left: 10%; */
 }
 
 .governer table th {
@@ -1200,22 +1231,30 @@ a {
 
 .governer table td {
     padding: 20px;
-    /* border: 2px solid gray; */
-    /* background-color: #ffffff1A; */
     color: black;
     font-weight: 700;
 
 }
-/* .governer tr{
-    display: flex;
-    flex-direction: column;
-} */
-.governer table tr td .name-img{
+
+/* .governer table tbody tr:hover{
+    background-color: #ffffff;
+    transform: scale(1.1);
+    transition: 0.5s;
+    box-shadow: 4px 3px 20px -2px rgba(16, 52, 107, 1); */
+
+
+
+.governer table tr td .name-img {
     display: flex;
     align-items: center;
-    
+
 }
-.governer table tr td .name-img img{
+
+.governer tr td {
+    text-align: center;
+}
+
+.governer table tr td .name-img img {
     width: 40px;
     height: 40px;
 }
@@ -1228,6 +1267,12 @@ a {
 
 }
 
+#governer-list table {
+    margin-left: 25%;
+    width: 900px;
+
+}
+
 .governer table td a:hover {
     background-color: #B1B2FF;
     transform: scale(1.1);
@@ -1236,6 +1281,7 @@ a {
     color: black;
     border-radius: 10px;
 }
+
 .profile-main {
     position: relative;
     width: 200px;
@@ -1272,13 +1318,14 @@ a {
     box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
     border-radius: 10px;
 }
-.fontsidepro:nth-child(even){
+
+.fontsidepro:nth-child(even) {
     background-image: url("../images/Mmk_flag.png");
 }
 
 .fontsidepro p {
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgb(10, 135, 252);
+    background-color: rgba(63, 53, 251, 0.4);
     text-align: center;
     color: #ffffff;
     height: 100%;
@@ -1314,9 +1361,10 @@ a {
     padding: 5px;
     background-color: #f2f3f4;
     border-radius: 10px;
-    
+
 }
-.parties .backsidepro button a{
+
+.parties .backsidepro button a {
     font-size: 13px;
 }
 
@@ -1324,11 +1372,13 @@ a {
     background-color: #B1B2FF;
     border-radius: 10px;
 }
-td .name-img img{
+
+td .name-img img {
     width: 40px;
     height: 40px;
 }
-td .name-img{
+
+td .name-img {
     display: flex;
     align-items: center;
 }
