--- a/assets/css/english-version.css
+++ b/assets/css/english-version.css
@@ -282,6 +282,11 @@ s */
     background-image: url('../images/essecial/learning-gc49fa0086_1920.jpg');
     height: 600px;
     margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
 
 }
 
@@ -345,7 +350,7 @@ s */
     justify-content: space-around;
     width: 60%;
     height: 150px;
-    margin-left: 21%;
+    /* margin-left: 21%; */
     /* bottom: 80px; */
     position: relative;
     top: 100px;
