--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,6 +302,10 @@ nav form {
     background-image: url('../images/essecial/learning-gc49fa0086_1920.jpg');
     height: 600px;
     margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -369,7 +373,7 @@ nav form {
     /* justify-content: space-around; */
     width: 60%;
     height: 150px;
-    margin-left: 21%;
+    /* margin-left: 21%; */
     /* bottom: 80px;  */
     top: 100px;
     position: relative;
@@ -416,6 +420,8 @@ nav form {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     animation-duration: 3s;
     animation-name: slidein;
 }
