--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1538,3 +1538,280 @@ td .name-img {
     border-radius: 10px;
     color: black; */
 }
+
+/* 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+} */
+
+@media screen and (max-width :900px) {
+    body::-webkit-scrollbar {
+        display: none;
+    }
+
+    .contact {
+        display: none;
+    }
+    .headvideo1{
+        display: none;
+    }
+
+    .totalnav{
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+    }
+    nav {
+        background-image: url("../images/essecial/istockphoto-1133933954-612x612.jpg");
+        background-position: center;
+        background-size: cover;
+
+    }
+
+    nav form {
+        width: 250px;
+        margin: 0%;
+    }
+
+    .section1 button {
+        width: 200px;
+        margin-bottom: 60px;
+    }
+
+    .section1 h2 {
+        font-size: 15px;
+    }
+
+    .section3 button {
+        width: 200px;
+    }
+
+    .section2 .content1 {
+        width: 100%;
+    }
+
+    .section2 .box {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 20em;
+    }
+
+    .section4 .project{
+        display: none;
+    }
+
+    .section4 {
+        position: relative;
+        bottom: 800px;
+        width: 85%;
+        /* margin: 0%; */
+        text-align: center;
+        display: flex;
+        align-items: center;
+    }
+
+    .news {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+    }
+
+    .news1 {
+        width: 85%;
+        margin-top: 10%;
+    }
+    .news .news1 .img-fluid{
+        margin: 10px 0 0 0;
+    }
+
+    .footer {
+        display: none;
+        /* flex-direction: column; */
+    }
+
+    /* total parties */
+
+    .totalparties {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        width: 100%;
+        
+
+    }
+
+    .parties-main {
+        margin-top: 60px;
+    }
+
+    /* portfolio */
+
+    .lists1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin:30px 0 0 0;
+    }
+
+    .list2 {
+        margin: 0%;
+    }
+
+    .piechart {
+        margin: 0%;
+        padding-top: 30px;
+    }
+
+    /* profile */
+    .headprofile {
+        margin: 0;
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .cm-name {
+        width: 90%;
+        line-height: 2;
+    }
+
+    .headprofile .cm-image img {
+        width: 300px;
+    }
+
+    .cm-total-content {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cmcontent {
+        margin: 0%;
+        width: 100%;
+    }
+
+    #income {
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* pastleaders */
+
+    .pastleaders table {
+        margin: 0%;
+        padding: 0;
+    }
+
+    .pastleaders table td {
+        padding: 50px 0 0 0;
+    }
+
+    .pastleaders table .date {
+        display: none;
+    }
+
+    /* manifesto */
+
+    .manifesto-create {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mani-navbar ul {
+        height: 350px;
+        /* width: 400px; */
+        /* display: inline-flex; */
+        /* flex-wrap: wrap; */
+
+        /* z-index: -1; */
+    }
+
+    .kali {
+        /* display: none; */
+        z-index: 10;
+        height: 80px;
+    }
+
+    .kali .maninav {
+        display: none;
+    }
+
+    .kali .serch {
+        margin: 0%;
+    }
+
+    .complete {
+        width: 100%;
+        height: 500px;
+    }
+
+
+    .complete .rules {
+        width: 100%;
+
+    }
+
+    .manisurvey {
+        margin: 10px;
+    }
+
+    /* governer list */
+
+    #governer-list table {
+        margin: 0%;
+
+    }
+
+    /* english verssion past leaders */
+
+    .datelist table {
+        margin: 30px 0 30px 0;
+
+    }
+
+    .opinionpoll {
+        width: 100%;
+        margin: 0%;
+    }
+
+    .opinionpoll form {
+        margin-top: 0;
+        width: 100%;
+        padding: 0;
+    }
+
+    .opinionpoll button {
+        margin: 0;
+    }
+
+    /* join page */
+
+    .joinpage form {
+        width: 100%;
+        margin: 0;
+    }
+
+    .joinpage {
+        margin: 0;
+        width: 100%;
+    }
+
+
+}
+
+/* @media screen and (max-width: 900px) {
+
+   nav {
+    background-color: aqua;
+   }
+    
+} */
+
+
