--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1927,4 +1927,38 @@ td .name-img {
     }
 
 
+
+
+
+    .datelist table {
+        margin: 30px 0 30px 0;
+
+    }
+
+    .opinionpoll {
+        width: 100%;
+        margin: 0%;
+    }
+
+    .opinionpoll form {
+        margin-top: 0;
+        width: 100%;
+        padding: 0;
+    }
+
+    .opinionpoll button {
+        margin: 0;
+    }
+    .joinpage form {
+        width: 100%;
+        margin: 0;
+    }
+
+    .joinpage {
+        margin: 0;
+        width: 100%;
+    }
+
+
+
 }
